# mono101-vst3

./: CMakeLists.txt
.github/workflows/: build.yml
Source/: PatchBank.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: ADSR.h  Arpeggiator.h  LFO.h  LadderFilter.h  Mono101Voice.h  PolyBLEP.h  Portamento.h
